# open-ephys-eeg-tools

./: .gitignore  README.md  decompress_csv.py  edf_to_lsl_streamer.py  lsl_eeg_streamer.py
OEPlugins/custom-ic-source/: CMakeLists.txt  README.md
OEPlugins/custom-ic-source/Source/: CustomICEditor.cpp  CustomICEditor.h  CustomICThread.cpp  CustomICThread.h  OpenEphysLib.cpp
OEPlugins/custom_python_ic_connector/: README.md  example_config.yaml  ic_to_lsl_connector.py  pyproject.toml  requirements.txt
OEPlugins/edf-file-source/: CMakeLists.txt
OEPlugins/edf-file-source/Source/: CSVFileSource.cpp  CSVFileSource.h  EDFFileSource.cpp  EDFFileSource.h  OpenEphysLib.cpp  XZDecompress.h
OEPlugins/edf-file-source/libs/: lzma.7z
OEPlugins/edf-file-source/libs/lzma-sdk/DOC/: lzma-history.txt  lzma-sdk.txt
OEPlugins/lab-streaming-layer-io/: CMakeLists.txt
OEPlugins/lab-streaming-layer-io/.github/workflows/: linux.yml  mac.yml  windows.yml
OEPlugins/lab-streaming-layer-io/Source/: OpenEphysLib.cpp
OEPlugins/lab-streaming-layer-io/Source/Inlet/: LSLInletEditor.cpp  LSLInletEditor.h  LSLInletThread.cpp  LSLInletThread.h
OEPlugins/lab-streaming-layer-io/Source/Outlet/: LSLOutlet.cpp  LSLOutlet.h  LSLOutletEditor.cpp  LSLOutletEditor.h
OEPlugins/lsl-outlet/: CMakeLists.txt  README.md
OEPlugins/lsl-outlet/Source/: LSLOutlet.cpp  LSLOutlet.h  LSLOutletEditor.cpp  LSLOutletEditor.h  OpenEphysLib.cpp
OEPlugins/lsl_investigation/: DOCUMENTATION.md  README.md  investigate_lsl_streams.py  read_annotations.py  read_edf_example.py  requirements.txt
(+24 files in other folders)
