[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-python-ic-connector"
version = "1.0.0"
description = "Python bridge plugin to stream custom IC data to Open Ephys via LSL"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["open-ephys", "lsl", "eeg", "neuroscience", "data-acquisition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pylsl>=1.16.0",
    "numpy>=1.20.0",
    "pyserial>=3.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
ic-to-lsl = "ic_to_lsl_connector:main"

[project.urls]
"Homepage" = "https://github.com/open-ephys-plugins"
"Bug Tracker" = "https://github.com/open-ephys-plugins/issues"

[tool.setuptools]
py-modules = ["ic_to_lsl_connector"]
